feat: build a base structure of html

--- a/src/index.html
+++ b/src/index.html
@@ -5,34 +5,147 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="index.css" />
 
         <title>Barbearia Alura</title>
     </head>
     <body>
-        <h1>Sobre a Barbearia Alura</h1>
+        <header>
+            <div class="logo" id="top">
+                <img
+                    src="./assets/img/logo.svg"
+                    alt="Logomarca barbearia alura"
+                    class="logo"
+                />
+            </div>
+            <div class="nav">
+                <nav>
+                    <a href="#top">Início</a>
+                    <a href="#about">Sobre</a>
+                    <a href="#services">Serviços</a>
+                    <a href="#contact">Contato</a>
+                </nav>
+                <div class="title">
+                    <h2>Barbearia para os Devs</h2>
+                    <div class="description">
+                        <p>
+                            Nossa missão é "proporcionar auto-estima e qualidade
+                            de vida aos clientes"
+                        </p>
+                    </div>
+                    <div class="button-header">
+                        <button class="button">Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-        <p>
-            Localizada no coração da cidade a
-            <strong>Barbearia Alura</strong> traz para o mercado o que há de
-            melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura
-            já é destaque na cidade e conquista novos clientes a cada dia.
-        </p>
+        <main>
+            <div class="about" id="about">
+                <h2>Sobre a Barbearia Alura</h2>
 
-        <p>
-            <em
-                >Nossa missão é:
-                <strong
-                    >"Proporcionar auto-estima e qualidade de vida aos
-                    clientes"</strong
-                >.</em
-            >
-        </p>
+                <p>
+                    Localizada no coração da cidade a Barbearia Alura traz para
+                    o mercado o que há de melhor para o seu cabelo e barba.
+                    Fundada em 2019, a Barbearia Alura já é destaque na cidade e
+                    conquista novos clientes a cada dia.
+                </p>
 
-        <p>
-            Oferecemos profissionais experientes e antenados às mudanças no
-            mundo da moda. O atendimento possui padrão de excelência e
-            agilidade, garantindo qualidade e satisfação dos nossos clientes.
-        </p>
+                <p>
+                    Nossa missão é "proporcionar auto-estima e qualidade de vida
+                    aos clientes"
+                </p>
+
+                <p>
+                    Oferecemos profissionais experientes e antenados às mudanças
+                    no mundo da moda. O atendimento possui padrão de excelência
+                    e agilidade, garantindo qualidade e satisfação dos nossos
+                    clientes.
+                </p>
+            </div>
+            <div class="services" id="services">
+                <div class="title">
+                    <h2>Serviços</h2>
+                    <p>
+                        Oferecemos profissionais experientes e antenados às
+                        mudanças no mundo da moda
+                    </p>
+                </div>
+                <div class="cards">
+                    <div class="beard">
+                        <img src="./assets/img/beard.svg" alt="" />
+                        <p>
+                            Refatorar barba e bigóde deixando aquela
+                            funcionalidade da cara de mal bem clean.
+                        </p>
+                    </div>
+                    <div class="beard-and-hair">
+                        <img src="./assets/img/beard-hair.svg" alt="" />
+                        <p>
+                            Estilo no cabelo e barba usando a ultima tendência
+                            em classes para ser bem identificado.
+                        </p>
+                    </div>
+                    <div class="hair">
+                        <img src="./assets/img/hair.svg" alt="" />
+                        <p>
+                            Commitar só o cabelo sem alteração no codigo gnêtico
+                            origial, evitando imutabilidade.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact" id="contact">
+                <div class="title">
+                    <h2>Marque um horário</h2>
+                    <p>
+                        Oferecemos profissionais experientes e antenados às
+                        mudanças no mundo da moda
+                    </p>
+                </div>
+                <div class="form">
+                    <form action="" method="get">
+                        <div>
+                            <input type="text" />
+                        </div>
+                        <div>
+                            <input type="email" name="" id="" />
+                        </div>
+                        <div>
+                            <input type="tel" name="" id="" />
+                        </div>
+                        <div class="radio"></div>
+                        <div>
+                            <input type="radio" name="" id="" />
+                            <label for="">telefone</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="" id="" />
+                            <label for="">Whatsapp</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="" id="" />
+                            <label for="">E-mail</label>
+                        </div>
+                        <div>
+                            <input type="datetime" />
+                        </div>
+                        <div>
+                            <button class="button form" type="submit">
+                                Enviar
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div>
+                <img src="./assets/img/logo.svg" alt="" />
+                <p>
+                    Um projeto do programa Desenvolve 3 Edição - Grupo Boticário
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
