feat: add another strategy to containers

--- a/src/index.html
+++ b/src/index.html
@@ -45,30 +45,39 @@
         </header>
 
         <main>
-            <div class="container">
-                <div class="about" id="about">
-                    <h2>Sobre a Barbearia Alura</h2>
+            <section class="about" id="about">
+                <img
+                    src="./assets/img/image-about.svg"
+                    alt="Homem fazendo a barba na barbearia sentando na cadeira"
+                />
+                <div class="container">
+                    <div class="text-history">
+                        <h2>Sobre a Barbearia Alura</h2>
 
-                    <p>
-                        Localizada no coração da cidade a Barbearia Alura traz
-                        para o mercado o que há de melhor para o seu cabelo e
-                        barba. Fundada em 2019, a Barbearia Alura já é destaque
-                        na cidade e conquista novos clientes a cada dia.
-                    </p>
+                        <p class="history">
+                            Localizada no coração da cidade a Barbearia Alura
+                            traz para o mercado o que há de melhor para o seu
+                            cabelo e barba. Fundada em 2019, a Barbearia Alura
+                            já é destaque na cidade e conquista novos clientes a
+                            cada dia.
+                        </p>
 
-                    <p>
-                        Nossa missão é "proporcionar auto-estima e qualidade de
-                        vida aos clientes"
-                    </p>
+                        <p class="mission">
+                            Nossa missão é "proporcionar auto-estima e qualidade
+                            de vida aos clientes"
+                        </p>
 
-                    <p>
-                        Oferecemos profissionais experientes e antenados às
-                        mudanças no mundo da moda. O atendimento possui padrão
-                        de excelência e agilidade, garantindo qualidade e
-                        satisfação dos nossos clientes.
-                    </p>
+                        <p class="team">
+                            Oferecemos profissionais experientes e antenados às
+                            mudanças no mundo da moda. O atendimento possui
+                            padrão de excelência e agilidade, garantindo
+                            qualidade e satisfação dos nossos clientes.
+                        </p>
+                    </div>
                 </div>
-                <div class="services" id="services">
+            </section>
+            <section class="services" id="services">
+                <div class="container">
                     <div class="title-services">
                         <h2>Serviços</h2>
                         <p>
@@ -100,7 +109,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact" id="contact">
+            </section>
+            <section class="contact" id="contact">
+                <div class="container">
                     <div class="title-contact">
                         <h2>Marque um horário</h2>
                         <p>
@@ -143,7 +154,7 @@
                         </form>
                     </div>
                 </div>
-            </div>
+            </section>
         </main>
         <footer>
             <div class="container">
