fix: try another strategy to position elements

--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,13 @@
 
         <main>
             <section class="about" id="about">
-                <img
-                    src="./assets/img/image-about.svg"
-                    alt="Homem fazendo a barba na barbearia sentando na cadeira"
-                />
-                <div class="container">
+                <div class="image-about">
+                    <img
+                        src="./assets/img/image-about.svg"
+                        alt="Homem fazendo a barba na barbearia sentando na cadeira"
+                    />
+                </div>
+                <div class="container-about">
                     <div class="text-history">
                         <h2>Sobre a Barbearia Alura</h2>
 
