--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="global.style.css" />
 
         <title>Barbearia Alura</title>
     </head>
@@ -48,7 +48,12 @@
                         </p>
                     </div>
                     <div class="button-header">
-                        <button class="button">Saiba Mais</button>
+                        <a
+                            href="https://www.alura.com.br/"
+                            target="_blank"
+                            class="button"
+                            >Saiba Mais</a
+                        >
                     </div>
                 </div>
             </div>
@@ -56,16 +61,13 @@
 
         <main>
             <section class="about" id="about">
-                <div class="image-about">
-                    <img
-                        src="./assets/img/image-about.svg"
-                        alt="Homem fazendo a barba na barbearia sentando na cadeira"
-                    />
-                </div>
-                <div class="container-about">
+                <div class="container">
                     <div class="text-history">
-                        <h2>Sobre a Barbearia Alura</h2>
-
+                        <h2>Sobre a Barbearia</h2>
+                        <p class="mission">
+                            Nossa missão é "proporcionar auto-estima e qualidade
+                            de vida aos clientes"
+                        </p>
                         <p class="history">
                             Localizada no coração da cidade a Barbearia Alura
                             traz para o mercado o que há de melhor para o seu
@@ -73,12 +75,6 @@
                             já é destaque na cidade e conquista novos clientes a
                             cada dia.
                         </p>
-
-                        <p class="mission">
-                            Nossa missão é "proporcionar auto-estima e qualidade
-                            de vida aos clientes"
-                        </p>
-
                         <p class="team">
                             Oferecemos profissionais experientes e antenados às
                             mudanças no mundo da moda. O atendimento possui
@@ -94,7 +90,7 @@
                         <h2>Serviços</h2>
                         <p>
                             Oferecemos profissionais experientes e antenados às
-                            mudanças no mundo da moda  
+                            mudanças no mundo da moda
                         </p>
                     </div>
                     <div class="cards">
@@ -144,15 +140,15 @@
                             </div>
                             <div class="radio"></div>
                             <div>
-                                <input type="radio" name="" id="" />
+                                <input type="radio" name="contac" id="" />
                                 <label for="">telefone</label>
                             </div>
                             <div>
-                                <input type="radio" name="" id="" />
+                                <input type="radio" name="contac" id="" />
                                 <label for="">Whatsapp</label>
                             </div>
                             <div>
-                                <input type="radio" name="" id="" />
+                                <input type="radio" name="contac" id="" />
                                 <label for="">E-mail</label>
                             </div>
                             <div>
