--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 
         <link rel="stylesheet" href="global.style.css" />
 
+        <script src="https://unpkg.com/scrollreveal"></script>
+
         <title>Barbearia Alura</title>
     </head>
     <body>
@@ -172,5 +174,6 @@
                 </p>
             </div>
         </footer>
+        <script src="./js/scrollReveal.js"></script>
     </body>
 </html>
