feat: insert table elements

--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,21 @@
                             Oferecemos profissionais experientes e antenados às
                             mudanças no mundo da moda
                         </p>
+
+                        <table>
+                            <tr>
+                                <td>Segunda-Feira</td>
+                                <td>8h ás 20hs</td>
+                            </tr>
+                            <tr>
+                                <td>Quarta-Feira</td>
+                                <td>8h ás 20hs</td>
+                            </tr>
+                            <tr>
+                                <td>Sexta-Feira</td>
+                                <td>8h ás 20hs</td>
+                            </tr>
+                        </table>
                     </div>
                     <div class="form">
                         <form action="" method="get">
